fix:소나큐브 코드 개선